--- a/spotify.html
+++ b/spotify.html
@@ -32,31 +32,61 @@
             <!-- <img src="./bg3.jpg" alt="" width="563px"> -->
             <div class="songItem">
                 <img src="./covers/1.jpg" alt="1">
-                <span>Let Me Love You!!!</span>
-                <img src="./playing.gif" width="50px" alt="" class="gifPlay">
+                <span class="songName">Let Me Love You!!!</span>
+                <img  width="50px" alt="" class="gifPlay">
                 <span class="songListPlay"><span class="time">05:34</span> <i class="far fa-2x fa-play-circle" id="play"></i></span>
             </div>
             <div class="songItem">
-                <img src="./covers/2.jpg" alt="1">
-                <span>Let Me Love You!!!</span>
+                <img src="./covers/2.jpg" alt="2">
+                <span class="songName">Let Me Love You!!!</span>
+                <img src="" width="50px" alt="" class="gifPlay">
+                <span class="songListPlay"><span class="time">05:34</span> <i class="far fa-2x fa-play-circle"  ></i></span>
+            </div>
+            <div class="songItem">
+                <img src="./covers/3.jpg" alt="3">
+                <span class="songName">Let Me Love You!!!</span>
                 <img src="./playing.gif" width="50px" alt="" class="gifPlay">
                 <span class="songListPlay"><span class="time">05:34</span> <i class="far fa-2x fa-play-circle"  ></i></span>
             </div>
             <div class="songItem">
-                <img src="./covers/3.jpg" alt="1">
-                <span>Let Me Love You!!!</span>
+                <img src="./covers/4.jpg" alt="4">
+                <span class="songName">Let Me Love You!!!</span>
                 <img src="./playing.gif" width="50px" alt="" class="gifPlay">
                 <span class="songListPlay"><span class="time">05:34</span> <i class="far fa-2x fa-play-circle"  ></i></span>
             </div>
             <div class="songItem">
-                <img src="./covers/4.jpg" alt="1">
-                <span>Let Me Love You!!!</span>
+                <img src="./covers/5.jpg" alt="5">
+                <span class="songName">Let Me Love You!!!</span>
                 <img src="./playing.gif" width="50px" alt="" class="gifPlay">
                 <span class="songListPlay"><span class="time">05:34</span> <i class="far fa-2x fa-play-circle"  ></i></span>
             </div>
             <div class="songItem">
-                <img src="./covers/5.jpg" alt="1">
-                <span>Let Me Love You!!!</span>
+                <img src="./covers/6.jpg" alt="6">
+                <span class="songName">Let Me Love You!!!</span>
+                <img src="./playing.gif" width="50px" alt="" class="gifPlay">
+                <span class="songListPlay"><span class="time">05:34</span> <i class="far fa-2x fa-play-circle"  ></i></span>
+            </div>
+            <div class="songItem">
+                <img  alt="7">
+                <span class="songName">Let Me Love You!!!</span>
+                <img src="./playing.gif" width="50px" alt="" class="gifPlay">
+                <span class="songListPlay"><span class="time">05:34</span> <i class="far fa-2x fa-play-circle"  ></i></span>
+            </div>
+            <div class="songItem">
+                <img  alt="8">
+                <span class="songName">Let Me Love You!!!</span>
+                <img src="./playing.gif" width="50px" alt="" class="gifPlay">
+                <span class="songListPlay"><span class="time">05:34</span> <i class="far fa-2x fa-play-circle"  ></i></span>
+            </div>
+            <div class="songItem">
+                <img src="./covers/9.jpg" alt="9">
+                <span class="songName">Let Me Love You!!!</span>
+                <img src="./playing.gif" width="50px" alt="" class="gifPlay">
+                <span class="songListPlay"><span class="time">05:34</span> <i class="far fa-2x fa-play-circle"  ></i></span>
+            </div>
+            <div class="songItem">
+                <img src="./covers/10.jpg" alt="10">
+                <span class="songName">Let Me Love You!!!</span>
                 <img src="./playing.gif" width="50px" alt="" class="gifPlay">
                 <span class="songListPlay"><span class="time">05:34</span> <i class="far fa-2x fa-play-circle"  ></i></span>
             </div>
@@ -68,7 +98,7 @@
         <input type="range" name="range" id="progressBar" min="0" value="0" max="100">
         
         <div class="icons">
-            <!-- fontawesome icons -->
+           
             <i class="fas fa-3x fa-step-backward" id="previous"></i>
             <i class="far fa-3x fa-play-circle" id="masterPlay" ></i>
             <i class="fas fa-3x fa-step-forward" id="next"></i> 
